@@ -11,6 +11,11 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-06
+2014-05-16 David
+- add unit test for epics
+- step for trac ticket #301
+
 Tag: V00-01-05
 2014-05-15 David
 - use file and memory h5 typeids
